applications/v5/backend/src/main/java/com/example/weeklyplanning/web/rest/errors/BadRequestException.java
package com.example.weeklyplanning.web.rest.errors;

public class BadRequestException extends RuntimeException {

    public BadRequestException(String message) {
        super(message);
    }
}
